[package]
name = "flow-free"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/number-link"
documentation = "https://docs.rs/flow-free"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
ndarray = "0.15.4"
rs-graph = "0.20.1"

[dev-dependencies]

[features]
default = []
