[package]
name = "flow-free"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/number-link"
documentation = "https://docs.rs/flow-free"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
rs-graph = "0.20.1"
serde = "1.0.136"
serde_derive = "1.0.136"
smallvec = "1.8.0"

[dependencies.ndarray]
version = "0.15.4"
features = ["serde"]

[dev-dependencies]

[features]
default = []
